[package]
name = "rust-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json ="1.0"
openssl = { version = "0.10", features = ["vendored"] }